Add script for generating inter-language links from WikiData
It uses the WikiData sameAs link data to generate the inter-language
links for each relevant language. Writing into files is done in
parallel.